# awesome_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  PROGRESS.md  README.md  README.zh-CN.md  alembic.ini  awesome-agent.yaml  docker-compose.yml  pyproject.toml
.agents/: README.md
.github/workflows/: documentation-sync.yml
demo/: index.html
docs/: ARCHITECTURE.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: agent-team-and-subagents.md  core-beliefs.md  durable-execution.md  extension-architecture.md  harness-engineering.md  index.md  memory-architecture.md  modifying-agent-loop.md  observability.md  product-surface-architecture.md  read-only-agent-loop.md  runtime-agent-harness.md  runtime-profiles-and-startup.md  structured-model-protocol.md  task-and-verification-model.md  teammate-local-validation.md  thin-graph-agent-loop-middleware.md
docs/engineering/: README.md  documentation-sync.md  engineering-harness.md  execution-plans.md
docs/exec-plans/: tech-debt-tracker.md
docs/getting-started/: quickstart.md
docs/operations/: README.md
docs/product-specs/: index.md  local-coding-agent.md
docs/project-governance/: README.md  documentation-governance.md  roadmap-writing-rules.md  runtime-roadmap-archive.md  runtime-roadmap.md  tech-debt-tracker.md
docs/references/: README.md
docs/user-guide/: README.md
migrations/: env.py
migrations/versions/: 20260624_0001_initial.py  20260625_0002_agent_model.py  20260625_0003_repository_run_intake.py  20260625_0004_run_dispatch_lease.py  20260625_0005_graph_identity.py  20260626_0006_readonly_graph_route.py  20260626_0007_artifact_tool_records.py  (+16 more)
sandbox/: __init__.py
scripts/: __init__.py  bootstrap.ps1  check.ps1  check_docs_sync.py  docker-quickstart.ps1  generate_db_docs.py  migrate.ps1  quickstart.ps1  smoke_external.py  system-test.ps1  test.ps1  verify_product_surface.ps1
tests/: conftest.py  fakes.py
(+384 files in other folders)
